math(build): decreased java version from 28 -> 17